--- a/README
+++ b/README
@@ -56,7 +56,7 @@ Key systems:
 
 ### 🧱 Step-by-Step Build Commands
 
-In **PowerShell or CMD**, run the following from your project root folder:
+In **PowerShell or CMD**, run the following from the project root folder:
 
 ```bash
 # Step 1: Generate Visual Studio project files
